# FREYA

./: .gitignore  Readme  Release_notes.txt  recipe
geant/: Readme
include/: Fission.h  Fission.inc  fissionEvent.h
lib/: libFission.dylib
regr/: run_test
regr/runtest1/: recipe
regr/runtest1/plot/: spnudist.gnuplot  spspec.gnuplot
regr/runtest1/src/: CMakeLists.txt
regr/runtest2/: recipe
regr/runtest2/plot/: nudist.gnuplot  spec.gnuplot
regr/runtest2/src/: CMakeLists.txt
regr/runtest3/: recipe
regr/runtest3/plot/: nudistEngCons.gnuplot  specEngCons.gnuplot  specEngConsTotal.gnuplot
regr/runtest3/src/: CMakeLists.txt
regr/runtest4/: recipe
regr/runtest4/plot/: nudistEngConsAllAct.gnuplot  specEngConsAllAct.gnuplot  specEngConsAllActCorrelatedTotal.gnuplot  specEngConsAllActTotal.gnuplot
regr/runtest4/src/: CMakeLists.txt
regr/runtest5/: recipe
regr/runtest5/plot/: photofissionNudist.gnuplot  photofissionSpec.gnuplot
regr/runtest5/src/: CMakeLists.txt
regr/runtest6/: recipe
regr/runtest6/baseline/: testFreyaNuDist.res.baseline  testFreyaSpec.res.baseline  testFreyaSpecTotal.res.baseline  testFreyaTotal.res.baseline
regr/runtest6/plot/: specFreya.gnuplot  specFreyaCorrelatedTotal.gnuplot  specFreyaTotal.gnuplot
regr/runtest6/src/: CMakeLists.txt  testFreya.c
sample_codes/: Readme
sample_codes/angular_correlation_c/src/: CMakeLists.txt  angular_correlation.c
sample_codes/events/src/: CMakeLists.txt  (+1 more)
src/: CMakeLists.txt  Fission.cc  SmpFreya.cc  fissionEvent.cc  msFREYA_data.F90  msFREYA_event.F90  msFREYA_interfaces.F90
(+13 files in other folders)
